src/test/ui/const-eval-overflow-2.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-eval-overflow-2.rs:21:1
   |
21 | const NEG_NEG_128: i8 = -NEG_128;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ miri failed: attempt to negate with overflow
   |
note: for pattern here
  --> $DIR/const-eval-overflow-2.rs:26:9
   |
26 |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to previous error

